@@ -10,6 +10,7 @@ NEW
     - Added "World Quest Addon"-Skin (embedded into Objectives tracker)
     - Added option to invert target/focus frame
     - Immersive Questing: Now works with auto accepting quest addons like AAP
+    - Added Ember Court to the objectives tracker (Big thanks to Belazor for all the testing)
 
 FIXES
     - Update "Raid Debuffs"
